--- a/assets/style.css
+++ b/assets/style.css
@@ -1,26 +1,28 @@
 * {
-
     margin: 0;
-
     padding: 0;
-
     color: white;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-shadow: 1px 1px rgb(76, 79, 82);
 }
 
 header,
 
 footer {
     width: 100%;
-    height: 120px;
+    height: 150px;
     background-color: black;
     color: white;
-    text-shadow: 1px 1px gray;
 }
 
 h1,
 
+h3,
+
 h2 {
     text-align: center;
+    padding-bottom: 10px;
+    padding-top: 10px;
 }
 
 img {
@@ -34,6 +36,7 @@ img {
 
 ul {
     padding-left: 40px;
+    padding-bottom: 20px;
     font-size: 20px;
 }
 
@@ -46,7 +49,7 @@ p {
     width: 80%;
     margin: 40px auto;
     border: 5px solid black;
-    box-shadow: 5px 5px #000000;
+    box-shadow: 2px 2px black;
 }
 
 body {
